# oak-sdk-mods

./: .clang-tidy  .cruft.json  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  prepare_releases.py  pyproject.toml  sqlite3.cmake
.github/workflows/: build.yml
abcd/: __init__.py  ammo.py  changelog.md  game_speed.py  god.py  instant_kill.py  pyproject.toml  teleport.py
dialog_skipper/: __init__.py  changelog.md  pyproject.toml
hunt/: .gitignore  __init__.py  balance.py  changelog.md  db.py  db_options.py  drops.py  hunt.sqlite3.template  mod_class.py  osd.py  pyproject.toml  sqs.py  tokens.py
hunt/generate_db/: .gitignore  Readme.md  generate.py
hunt/native/: CMakeLists.txt  drops.pyi  osd.cpp  osd.pyi  tmp.cpp
hunt/native/drops/: balance.cpp  balance.h  coop.cpp  coop.h  drop_queries.cpp  drop_queries.h  find_drop_request.cpp  find_drop_request.h  hooks.cpp  hooks.h  main.cpp  sql.cpp  sql.h
obj_dump/: __init__.py  changelog.md  pyproject.toml
spawn_reset/: __init__.py  pyproject.toml
