[project]
name = "dialog_skipper"
version = "2"
authors = [{ name = "apple1417" }]
description = "Adds a keybind to skip dialog."

[project.urls]
Changelog = "https://github.com/apple1417/oak-sdk-mods/blob/master/dialog_skipper/changelog.md"

[tool.sdkmod]
name = "Dialog Skipper"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/apple1417/oak-sdk-mods/releases/download/nightly/dialog_skipper.sdkmod"
