[project]
name = "hunt"
version = "1.3.2"
authors = [{ name = "apple1417" }]
description = """
The offical Borderlands 3 Hunt Tracker.

How quickly can you collect all unique items? This mod will track it for you. Automatically \
redeems items when you obtain them from a valid source, and provides a number of in-game menus to \
track your progression.
"""

[project.urls]
Rules = "https://apple1417.dev/bl3/hunt"

[tool.sdkmod]
name = "Hunt Tracker"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/apple1417/oak-sdk-mods/releases/download/nightly/hunt.sdkmod"
supported_games = ["BL3"]
