[project]
name = "hunt"
version = "6.3.2"
authors = [{ name = "apple1417" }]
description = """
The official Borderlands 3 Hunt Tracker.

Keep track of your collected unique items. View statistics about your run, and display them in \
game. Or just use the encyclopedia of drop sources as a reference.
"""

[project.urls]
Rules = "https://apple1417.dev/bl3/hunt"
"Google Sheet" = "https://docs.google.com/spreadsheets/d/1wwxGn2XY14qtANYcWDdREvZQzHU5c7_EGNXUQTjgW_o/edit?usp=sharing"
Changelog = "https://github.com/apple1417/oak-sdk-mods/blob/master/hunt/changelog.md"

[tool.sdkmod]
name = "Hunt Tracker"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/apple1417/oak-sdk-mods/releases/download/nightly/hunt.zip"
supported_games = ["BL3"]
coop_support = "RequiresAllPlayers"
